--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,15 @@
         <activity android:name=".FoodList" />
         <activity android:name=".Cart" />
         <activity android:name=".OrderStatus" />
+
+        <service
+            android:name=".Service"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".Service.ListenOrder"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
